src/test/ui/exclusive-range/exclusive_range_pattern_syntax_collision.stderr
error: `X..` range patterns are not supported
  --> $DIR/exclusive_range_pattern_syntax_collision.rs:5:13
   |
LL |         [_, 99.., _] => {},
   |             ^^^^ help: try using the maximum value for the type: `99..MAX`

error[E0308]: mismatched types
  --> $DIR/exclusive_range_pattern_syntax_collision.rs:5:13
   |
LL |     match [5..4, 99..105, 43..44] {
   |           ----------------------- this match expression has type `std::ops::Range<{integer}>`
LL |         [_, 99.., _] => {},
   |             ^^^^ expected struct `std::ops::Range`, found integer
   |
   = note: expected type `std::ops::Range<{integer}>`
              found type `{integer}`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
